# Toci

./: &2  .Makefile.swp  .access.cpp.swp  .arbol.swo  .args.h.swp  .arraydef.h.swp  .cleanMUMcand.cpp.swp  .construct.cpp.swp  .construct.gen.swp  .depend  .dfs.cpp.swp  .dfs.gen.swp  .distribute.cpp.swp  .errordef.h.swp  .findmumcand.cpp.swp  .instrumentation.2.log.swp  .instrumentation.log.swp  .intbits.h.swp  .linkloc.cpp.swp  .log1.swp  .log2.swp  .mapfile.cpp.swo  .mapfile.cpp.swp  .optdesc.h.swp  .procmaxmat.cpp.swp  .protodef.h.swp  .scanpref.cpp.swp  .space.cpp.swo  .space.cpp.swp  .spacedef.h.swo  .spacedef.h.swp  .streeacc.h.swp  .streedbg.cpp.swp  .streefiledoc.cpp.swp  .streehuge.h.swo  .streehuge.h.swp  .streemac.h.swp  .streetyp.h.swp  .swp  .toci.cpp.swp  (+661 more)
.AppleDouble/: .Parent
MUMmer/: Makefile  annotate  combineMUMs  delta-filter  dnadiff  exact-tandems  gaps  mapview  mgaps  mummer  mummerplot  nucmer  promer  repeat-match  run-mummer1  run-mummer3  show-aligns  show-coords  show-diff  show-snps  show-tiling  tags
MUMmer3.23/: Makefile  annotate  combineMUMs  delta-filter  dnadiff  exact-tandems  gaps  mapview  mgaps  mummer  mummerplot  nucmer  promer  repeat-match  run-mummer1  run-mummer3  show-aligns  show-coords  show-diff  show-snps  show-tiling
eval2012/: evaluation2012.aux  evaluation2012.fdb_latexmk  evaluation2012.nav  evaluation2012.out  evaluation2012.tex  evaluation2012.toc  evaluation_2012.aux  evaluation_2012.bbl  evaluation_2012.blg  evaluation_2012.fdb_latexmk  evaluation_2012.out  evaluation_2012.tex  portada.docx
eval2013/: algorithm.eps  esa1.eps  esa2.eps  esa3.eps  evaluation2012.fdb_latexmk  evaluation2012.nav  evaluation2013.aux  evaluation2013.bbl  evaluation2013.blg  evaluation2013.dvi  evaluation2013.fdb_latexmk  evaluation2013.out  evaluation2013.tex  evaluation_2012.aux  evaluation_2012.bbl  evaluation_2012.fdb_latexmk  phases.eps  presentation2013.aux  presentation2013.dvi  presentation2013.fdb_latexmk  references.bib  st-mum.eps  st1.eps  st2.eps  st3.eps  state.eps
fasta/: qry.fa  qry100k.fa  qry10k.fa  qry20.fa  ref.fa  ref100k.fa  ref10k.fa  ref20.fa
libbasedir/: .types.h.swp  clock.c  errordef.h
libfid/: Makefile  Makefile.am  Makefile.in  alphabet.c  alphabet.h  alphabet.lo  arrays.h  check32in64.h  createfiles.c  createfiles.h  createfiles.lo  dbfiles.c  dbfiles.h  dbfiles.lo  error.c  error.h  filereader.c  filereader.h  filereader.lo  fileutils.c  fileutils.h  fileutils.lo  generic.fun  libdefs.h  libfid.32  libfid.64  libfid.h  libfid.la  libfid.undef  libfidinttypes.h  libfidxx.h  memory.c  memory.h  memory.lo  options.c  options.h  options.lo  parserfuns.32  parserfuns.64  parserfuns.fun  (+38 more)
libfid/.deps/: alphabet.Plo  createfiles.Plo  dbfiles.Plo  error.Plo  filereader.Plo  fileutils.Plo  memory.Plo  options.Plo  projectfile.Plo  sequences.Plo  suffixarray.Plo  suffixarrayext.Plo  utilities.Plo
libfid/.libs/: libfid.la  libfid.lai  libfid.so.1  libfid.so.1.0.1
mm3src/: maxmat3.dbg.x  maxmat3.x
nbproject/: Package-Default.bash  configurations.xml  project.xml
papers/: mum_multithread.tar.bz2
results/: 01-02-2013_21:00:15-1-BRANCH.aff  01-02-2013_21:00:15-1-CACHE.aff  01-02-2013_21:00:15-1-L2.aff  01-02-2013_21:00:15-1-L2CACHE.aff  01-02-2013_21:00:15-1-L3.aff  01-02-2013_21:00:15-1-L3CACHE.aff  01-02-2013_21:00:15-1-MEM.aff  01-02-2013_21:00:15-1-TLB.aff  01-02-2013_21:00:15-12-BRANCH.aff  01-02-2013_21:00:15-12-CACHE.aff  01-02-2013_21:00:15-12-L2.aff  01-02-2013_21:00:15-12-L2CACHE.aff  01-02-2013_21:00:15-12-L3.aff  01-02-2013_21:00:15-12-L3CACHE.aff  01-02-2013_21:00:15-12-MEM.aff  01-02-2013_21:00:15-12-TLB.aff  01-02-2013_21:00:15-24-BRANCH.aff  01-02-2013_21:00:15-24-CACHE.aff  01-02-2013_21:00:15-24-L2.aff  01-02-2013_21:00:15-24-L2CACHE.aff  01-02-2013_21:00:15-24-L3.aff  01-02-2013_21:00:15-24-L3CACHE.aff  01-02-2013_21:00:15-24-MEM.aff  01-02-2013_21:00:15-24-TLB.aff  01-02-2013_21:00:15-6-BRANCH.aff  01-02-2013_21:00:15-6-CACHE.aff  01-02-2013_21:00:15-6-L2.aff  01-02-2013_21:00:15-6-L2CACHE.aff  01-02-2013_21:00:15-6-L3.aff  01-02-2013_21:00:15-6-L3CACHE.aff  01-02-2013_21:00:15-6-MEM.aff  01-02-2013_21:00:15-6-TLB.aff  01-02-2013_21:40:25-1-BRANCH.aff  01-02-2013_21:40:25-1-CACHE.aff  01-02-2013_21:40:25-1-L2.aff  01-02-2013_21:40:25-1-L2CACHE.aff  01-02-2013_21:40:25-1-L3.aff  01-02-2013_21:40:25-1-L3CACHE.aff  01-02-2013_21:40:25-1-MEM.aff  01-02-2013_21:40:25-1-TLB.aff  (+440 more)
smhasher-read-only/: a.out  (+4 more)
(+300 files in other folders)
